[project]
name = "audiobook-creator"
version = "0.1.0"
description = "A tool to convert text to audiobooks using Qwen3-TTS"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "qwen-tts @ git+https://github.com/QwenLM/Qwen3-TTS.git",
    "torch>=2.0.0",
    "soundfile",
    "click>=8.0.0",
    "rich>=10.0.0",
    "PyPDF2>=3.0.0",
    "ebooklib>=0.18",
    "lxml>=4.9.0",
    "beautifulsoup4>=4.12.0",
    "num2words>=0.5.13",
    "pydub>=0.25.1",
    "kokoro>=0.9.4",
]
requires-python = ">=3.11,<3.13"

[project.scripts]
audiobook-creator = "audiobook_creator.cli:cli"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audiobook_creator"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
